2012-10-20  Simson Garfinkel  <simsong@air2.local>

	* src/tcpdemux.h (class tcpdemux): process_tcp, process_ip, process_ip4 and process_ip6 now take const struct timeval &ts instead of const struct timeval *ts as their first argument, becuase ts should never be NULL.

2012-09-16  Simson Garfinkel  <simsong@Mucha.local>

	* src/flow.cpp (flow::filename): TM_FORMAT is now "%Y-%m-%dT%H:%M:%SZ"

	* src/xml.cpp (xml::add_DFXML_execution_environment): TM_FORMAT is now always "%Y-%m-%dT%H:%M:%SZ"

2012-09-11  Simson Garfinkel  <simsong@Mucha.local>

	* src/datalink.cpp (dl_ethernet): now handles ETHERTYPE_LOOPBACK not defined.

2012-08-20  Simson Garfinkel  <simsong@FC17>

	* configure.ac: increased version number to 1.3.0

2012-08-16  Simson Garfinkel  <simsong@mucha.lan>

	* src/tcpdemux.cpp (tcpdemux::process_tcp): fixed bug in which myflow.tlast wasn't being set.

2012-08-16  Simson Garfinkel  <simsong@Mucha.local>

	* configure.ac: Increased version number to 1.2.9


	* src/main.cpp (main): fixed compile bugs that resulted from adoption of standard DFXML header.

2012-08-10  Simson Garfinkel  <simsong@imac3.local>

	* configure.ac (HAVE_PTHREAD): fixed typo in configure.ac
	
2012-08-08  Simson Garfinkel  <simsong@FC17>

	* src/tcpdemux.h: removed struct ip as it was redundent to struct iphdr

	* configure.ac: tcpflow now compiles under mingw for Windows

	* src/tcpdemux.cpp: moved tcpdemux class methods into this new file.

2012-08-03  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/tcpip.cpp (tcpip::close_file): added support for FUTIMENS, but I don't yet have a system on which to test it. Hope that it's good.

 2012-07-23  Simson Garfinkel  <simsong@Mucha.local>

	* src/main.cpp (main): added calling process_infile(expression,device,"",true) when no files are provided to fix bug of no live capture.

	* configure.ac: version 1.2.8

2012-07-02  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/sysdep.h: removed; put code in tcpflow.h for simplicity
