@@ -1,3 +1,9 @@
+2012-10-21  Simson Garfinkel  <simsong@air2.local>
+
+	* src/tcpip.cpp (tcpip::store_packet): removed syn_set parameter and put in tcpdemux::process_tcp
+
+	* configure.ac: changed version number to 1.3.1devel
+
 2012-10-20  Simson Garfinkel  <simsong@air2.local>
 
 	* src/tcpdemux.h (class tcpdemux): process_tcp, process_ip, process_ip4 and process_ip6 now take const struct timeval &ts instead of const struct timeval *ts as their first argument, becuase ts should never be NULL.
